--- a/grafana_prom/prometheus.yml
+++ b/grafana_prom/prometheus.yml
@@ -1,15 +1,13 @@
 global:
-  scrape_interval: 60s
-  evaluation_interval: 60s
+  scrape_interval: 30s
+  evaluation_interval: 30s
 
 scrape_configs:
   - job_name: 'aruba-cli'
+    scrape_interval: 30s
+    scrape_timeout: 15s
     static_configs:
       - targets: ['aruba_cli_exporter:9130']
-
-  - job_name: 'aruba-fake'
-    static_configs:
-      - targets: ['fake_aruba_exporter:9131']
 
   - job_name: 'aruba-snmp'
     scrape_interval: 60s
